@@ -29,6 +29,7 @@
 <% end -%>
 </ul>
 
+<% if logged_in_as_admin? -%>
 <h2>管理者用メニュー</h2>
 <ul>
 <li><%= link_to '地域Ruby会議を新しく開催する', new_admin_event_path %></li>
@@ -37,5 +38,5 @@
 <li><%= link_to '地域Ruby会議の管理用メニュー', admin_events_path %></li>
 <li><%= link_to 'ユーザ(というか管理者)の一覧', admin_users_path %></li>
 </ul>
-
+<% end -%>
 </div><!-- /event_index -->
